<resources>
    <string name="app_name">Testing</string>
    <string name="Bienvenidos">Bienvenidos a la aplicacion prueba</string>
    <string name="Niveles">Ver niveles de ruido</string>
    <string name="Subirniveles">Enviar prueba de ruido</string>
    <string name="Informacion">Informacion</string>
        <string name="Seccion_Ayuda">Esta aplicación ha sido realizada por Adrián Marín Portillo, estudiante del Grado de Ingeniería Informática, para el TFG.\n\nPara mas información contacto:
    </string>
    <string name="correo">adrianmarinportillo@gmail.com</string>
    <string name="subir_archivo">Subir via archivo</string>
    <string name="subir_grabar">Grabar audio</string>
    <string name="elegir">Elija una opcion</string>
    <string name="title_activity_record_activity">record_activity</string>
    <string name="start">Grabar</string>
    <string name="stop">Parar</string>
    <string name="play">Reproducir</string>
    <string name="disclaimer">Atención: solo se puede subir un archivo con la primera opcion si se dispone de apps como File Explorer</string>
    <string name="Compartir">Compartir</string>
    <string name="title_activity_compartir">compartir</string>
    <string name="icon_share">&#xf064;</string>
    <string name="share_twitter">Mensaje de Twitter</string>
    <string name="share_facebook">Mensaje de Facebook</string>
    <string name="share_email_gmail">Mensaje de Gmail</string>
    <string name="share_email_subject">Mira esta aplicación:</string>
    <string name="share_email_native">Esta aplicación lo está petando en Internet:</string>
    <string name="share_chooser_text">Escoja aplicación</string>
    <string name="title_activity_niveles">Niveles de ruido</string>
    <string name="example">Descripcion</string>
    <string name="microfono">Microfono</string>
    <string name="mi_localizacion">Mi localizacion</string>
    <string name="siguiente">Siguiente</string>
</resources>
