<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">




    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="Microfono"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_image" />

    <Button
        android:id="@+id/btn_grabar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="67dp"
        android:layout_toLeftOf="@+id/imageView1"
        android:onClick="start"
        android:contentDescription="@string/microfono"
        android:text="@string/start"

        />
    <Button
        android:id="@+id/btn_prueba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="stop"
        android:text="@string/stop"

        android:layout_alignTop="@+id/btn_grabar"
        android:layout_toRightOf="@+id/imageView1"
        android:layout_toEndOf="@+id/imageView1" />
    <Button
        android:id="@+id/btn_reproducir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_prueba"
        android:layout_centerHorizontal="true"
        android:onClick="play"

        android:text="@string/play" />


</RelativeLayout>
